# uw-alerts-dashboard

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build_test.yml
data/snapshot/: alerts.csv  incidents.csv
docs/: github-setup.md  project-plan.md
docs/superpowers/plans/: 2026-06-17-parallel-batch-scraper.md  2026-06-17-wire-frontend-to-postgres.md  2026-06-29-local-dev-setup.md
docs/superpowers/specs/: 2026-06-29-local-dev-setup-design.md
scraper/: Dockerfile  audit.py  batch_history.py  batch_system_prompt.py  config.py  logging_config.py  requirements.txt  scraper_agent.py  system_prompt.py
scraper/db/: dump.py  migrate.py  schema.py  schema.sql  wait.py
scraper/tests/: test_agent.py  test_batch_history.py  test_config.py  test_database.py  test_geocode.py  test_logging.py  test_migrate.py  test_schema.py  test_schema_apply.py  test_scrape.py  test_wait.py
scraper/tools/: database.py  geocode.py  scrape.py
uw-alert-web/: db.py  uw-alert-web.py
uw-alert-web/parse_uw_alerts/: parse_uw_alerts.py
uw-alert-web/tests/: test_db.py  test_parse_uw_alerts.py  test_visualization_manager.py
uw-alert-web/visualization_manager/: process_seattle_streets.py  visualization_manager.py
