[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "uw-alert-web"
version = "1.0"
description = "Visualize incidents/announcements from the UW Alert system"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyproj",
    "gunicorn",
    "folium==0.14.0",
    "shapely==2.0.1",
    "flask==2.2.2",
    "werkzeug>=2.2,<3.0",
    "numpy==1.24.2",
    "fiona>=1.8,<1.10",
    "geopandas==0.12.2",
    "anthropic>=0.36.0",
    "requests>=2.28.1",
    "beautifulsoup4",
    "python-dotenv==0.21.0",
    "googlemaps==4.10.0",
    "openai>=1.0",
    "psycopg2-binary>=2.9",
    "pandas>=1.5",
    "transformers>=5.12.1",
]

[dependency-groups]
dev = [
    "coverage",
    "ruff>=0.5",
    "poethepoet>=0.27",
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "python-json-logger>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]

# ---------------------------------------------------------------------------
# Poe the Poet tasks
# ---------------------------------------------------------------------------

[tool.poe.tasks.fmt]
help = "Format code and auto-fix lint issues"
sequence = [
    { cmd = "ruff format ." },
    { cmd = "ruff check --fix ." },
]

[tool.poe.tasks.lint]
help = "Check lint without modifying files"
cmd = "ruff check ."

[tool.poe.tasks.test]
help = "Run unit tests with coverage report"
sequence = [
    { cmd = "coverage run --rcfile=.coverage.rc -m unittest discover", cwd = "uw-alert-web" },
    { cmd = "coverage report", cwd = "uw-alert-web" },
]

[tool.poe.tasks.test-scraper]
help = "Run scraper unit tests"
cmd = "pytest scraper/tests/ -v"

# ---------------------------------------------------------------------------
# Ruff config (replaces pylint)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",       # line too long — long docstrings are common here
    "W291",       # trailing whitespace — present in multi-line test strings, unsafe to auto-fix
    "W293",       # whitespace on blank line — same reason as W291
]

[tool.pytest.ini_options]
pythonpath = ["."]
