[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "uw-alert-web"
version = "1.0"
description = "Visualize incidents/announcements from the UW Alert system"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyproj",
    "gunicorn",
    "folium==0.14.0",
    "shapely==2.0.1",
    "flask==2.2.2",
    "werkzeug>=2.2,<3.0",
    "numpy==1.24.2",
    "fiona>=1.8,<1.10",
    "geopandas==0.12.2",
    "anthropic>=0.36.0",
    "requests>=2.28.1",
    "beautifulsoup4",
    "python-dotenv==0.21.0",
    "googlemaps==4.10.0",
    "openai>=1.0",
    "psycopg2-binary>=2.9",
    "pandas>=1.5",
    "transformers>=5.12.1",
]

[dependency-groups]
dev = [
    "coverage",
    "ruff>=0.5",
    "poethepoet>=0.27",
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "python-json-logger>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]

# ---------------------------------------------------------------------------
# Poe the Poet tasks
# ---------------------------------------------------------------------------

[tool.poe]
envfile = ".env"

[tool.poe.tasks.fmt]
help = "Format code and auto-fix lint issues"
sequence = [
    { cmd = "ruff format ." },
    { cmd = "ruff check --fix ." },
]

[tool.poe.tasks.lint]
help = "Check lint without modifying files"
cmd = "ruff check ."

[tool.poe.tasks.test]
help = "Run unit tests with coverage report"
sequence = [
    { cmd = "coverage run --rcfile=.coverage.rc -m unittest discover", cwd = "uw-alert-web" },
    { cmd = "coverage report", cwd = "uw-alert-web" },
]

[tool.poe.tasks.test-scraper]
help = "Run scraper unit tests"
cmd = "pytest scraper/tests/ -v"

[tool.poe.tasks.db-dump]
help = "Export DB tables to data/snapshot/ CSV files"
cmd = "python -c \"import psycopg2, os; from scraper.db.dump import dump_to_csv; conn = psycopg2.connect(os.environ['DATABASE_URL']); print(dump_to_csv(conn)); conn.close()\""

[tool.poe.tasks.db-seed]
help = "Seed DB from data/snapshot/ CSV files (skips duplicates)"
cmd = "python -c \"import psycopg2, os; from scraper.db.migrate import seed_from_snapshot; conn = psycopg2.connect(os.environ['DATABASE_URL']); print(seed_from_snapshot('data/snapshot', conn)); conn.close()\""

[tool.poe.tasks.serve]
help = "Start the Flask web app"
cmd = "flask --app=uw-alert-web run"
cwd = "uw-alert-web"

[tool.poe.tasks.db-down]
help = "Stop local Postgres container"
cmd = "docker compose down"

[tool.poe.tasks.setup]
help = "Spin up postgres, apply schema, and seed from snapshot"
sequence = [
  { cmd = "docker compose up -d" },
  { script = "scraper.db.wait:wait_for_postgres" },
  { script = "scraper.db.schema:apply_schema" },
  { ref = "db-seed" },
]

[tool.poe.tasks.dev]
help = "Full local dev: postgres up, schema, seed, and Flask at http://127.0.0.1:5000"
sequence = [
  { ref = "setup" },
  { ref = "serve" },
]

# ---------------------------------------------------------------------------
# Ruff config (replaces pylint)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",       # line too long — long docstrings are common here
    "W291",       # trailing whitespace — present in multi-line test strings, unsafe to auto-fix
    "W293",       # whitespace on blank line — same reason as W291
]

[tool.pytest.ini_options]
pythonpath = ["."]
